# morphocluster

./: .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  conda-lock.yml  docker-compose.default.yml  docker-compose.prod.yml  docker-compose.yml  environment.base.yml  environment.default.yml  environment.dev.yml  environment.yml  gen-conda-lock.sh  populate-database.sh  pyproject.toml  redis.conf  redis_lru.conf  requirements_conda.txt  run.py  setup.cfg  setup.py  supervisord.conf
lib/: .gitattributes  MANIFEST.in  pyproject.toml  setup.py
lib/src/morphocluster/lib/: __init__.py  _version.py  prototypes.py  recluster.py  rf_rank.py  scripts.py  tree.py
lib/tests/: test_n_centroid_distance.py
server/: .dockerignore  MANIFEST.in  alembic.ini  build_docker.sh  docker-compose.default.yml  pyproject.toml  run.py  setup.cfg  setup.py  supervisord.conf
server/migrations/versions/: 02f82c1fb311_.py  03df35632254_.py  20b499a891eb_.py  309729a37f88_.py  4790ac7b1bf8_.py  52928669f064_.py  762c3a983d96_.py  77b9c8eb1df8_.py  92065c3757f1_.py  a1e953c610cb_.py  aacb0ce28ba6_.py  ac57b043449c_.py  db2a7b29511b_.py  f414d71c50c3_.py
server/src/morphocluster/server/: __init__.py  api.py  background.py  classifier.py  cli.py  config_default.py  extensions.py  frontend.py  helpers.py  member.py  models.py  newer_than.py  numpy_json_encoder.py  (+4 more)
server/tests/: conftest.py  docker-compose.yml  test_app.py  test_cli.py  test_worker.py
server/tests/sql/: test_types.py
(+175 files in other folders)
