[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
versionfile_source = "src/morphocluster/lib/_version.py"
versionfile_build = "src/morphocluster/lib/_version.py"
parentdir_prefix = ""
tag_prefix = ""
style = "pep440"
